<!--
  ~ Copyright (c) 2015. bysy@users.noreply.github.com
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_notification_key"
        android:title="Show player notification"
        android:summary="Control the player from your lockscreen (Lollipop and later) and drawer"
        android:defaultValue="true" />
    <ListPreference
        android:key="@string/pref_locale_list_preference_key"
        android:title="Locale"
        android:entries="@array/pref_locale_entries_array"
        android:entryValues="@array/pref_locale_values_array"
        android:defaultValue="@string/pref_locale_default_value"/>
    <EditTextPreference
        android:key="@string/pref_locale_key"
        android:title="Custom locale"
        android:defaultValue=""
        android:enabled="false"
        android:selectAllOnFocus="true"
        android:inputType="textCapCharacters"
        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>
