<!--
  ~ Copyright (c) 2015. bysy@users.noreply.github.com
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="0dp"
    android:gravity="center_horizontal"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="8dp"
    android:paddingBottom="0dp"
    tools:context="com.github.bysy.spotifystreamer.PlayerDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Artist"
        android:id="@+id/artistNameView"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceSmall" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Album"
        android:id="@+id/albumNameView"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceSmall" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:minHeight="128dp"
        android:id="@+id/playerAlbumImage"
        android:gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        tools:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/songNameView"
        android:gravity="center_horizontal"
        android:textAppearance="?android:textAppearanceSmall"
        tools:text="Song name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Song"
        android:id="@+id/buttons"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:baselineAligned="false"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/previousButton"
            android:src="@drawable/previous_icon"
            android:contentDescription="@string/action_previous_content_description" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/playButton"
            android:src="@drawable/play_icon"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:contentDescription="@string/action_play_pause_content_description" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:id="@+id/nextButton"
            android:src="@drawable/next_icon"
            android:contentDescription="@string/action_next_content_description"/>
    </LinearLayout>

</LinearLayout>
